<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/backdrop"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:fitsSystemWindows="true"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/rank_label"
            style="@style/label"
            android:text="@string/rank_label" />

        <TextView
            android:id="@+id/rank_text_view"
            style="@style/value" />

        <TextView
            android:id="@+id/full_title_label"
            style="@style/label"
            android:text="@string/full_title_label" />

        <TextView
            android:id="@+id/full_title_text_view"
            style="@style/value" />

        <TextView
            android:id="@+id/crew_label"

            style="@style/label"
            android:text="@string/crew_label" />


        <TextView
            android:id="@+id/crew_text_view"
            style="@style/value" />

        <TextView
            android:id="@+id/rating_label"

            style="@style/label"
            android:text="@string/rating_label" />

        <TextView
            android:id="@+id/rating_text_view"
            style="@style/value" />

        <TextView
            android:id="@+id/rating_count_label"

            style="@style/label"
            android:text="@string/rating_count_label" />

        <TextView
            android:id="@+id/rating_count_text_view"
            style="@style/value" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>